# VSM-Data-Anal

./: LICENSE  README.md  app.py  plot_app.py  plot_pane.py  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md
examples/data/: sample1.csv  sample2.csv
src/vsm_gui/: __init__.py  app.py  main_window.py
src/vsm_gui/analysis/: __init__.py  anisotropy.py  metrics.py  paramag.py
src/vsm_gui/file_io/: loader.py
src/vsm_gui/file_io/parsers/: __init__.py  base.py  csv.py
src/vsm_gui/model/: dataset.py
src/vsm_gui/plotting/: manager.py
src/vsm_gui/services/: __init__.py  units.py
src/vsm_gui/utils/: cursors.py  errors.py  logging.py  settings.py
src/vsm_gui/widgets/: analysis_panel.py  axis_mapping.py  file_picker.py  format_dialog.py  plot_pane.py  prompts.py
tests/: test_autodetect_window.py  test_extension_points.py  test_format_dialog.py  test_imports.py  test_manager_dataset_accessor.py  test_metrics_precise.py  test_paramag_autodetect.py  test_paramag_subtraction.py
tools/: check_qt_imports.py
