[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vsm-gui"
version = "0.1.0"
description = "VSM Data Viewer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.0",
    "matplotlib",
    "pandas",
    "numpy",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "W"]
